css/index.css
html { height: 100% }
body { height: 100%; margin: 0; padding: 0 }
#map-canvas { height: 300px;}
#map-canvasG { height: 200px; margin: 12px 0px; width: 100%;}
#buttons > button {
  margin-bottom: 4px;
}
body {
  padding-top: 50px;
}
.starter-template {
  padding: 40px 15px;
  text-align: center;
}

.map-container { padding: 0px}

#runlist { overflow: scroll; height: 300px}
#buttons {margin-bottom: 6px}
#images {height: 150px; overflow-x: hidden; margin-bottom: 5px;}
#images img {margin-right: 5px;margin-bottom: 5px;}
.scrollable {
    max-height: 200px;
    overflow-x: hidden;
}

.image {
width: 150px;
height: 150px;
}

.instagram-image {
opacity: 0;
-webkit-animation:
openSpace 0.2s ease forwards,
moveIn 0.2s 0.2s ease forwards;
-ms-animation:
openSpace 0.2s ease forwards,
moveIn 0.2s 0.2s ease forwards;
animation:
openSpace 0.2s ease forwards,
moveIn 0.2s 0.2s ease forwards;
}
.instagram-image-deleted {
-webkit-animation:
closeSpace 0.8s ease forwards;
-ms-animation:
closeSpace 0.8s ease forwards;
animation:
closeSpace 0.8s ease forwards;
}
@-webkit-keyframes openSpace {
from {
  max-width: 0px;
}
to {
  max-width: 150px;
}
}
@-ms-keyframes openSpace {
from {
  max-width: 0px;
}
to {
  max-width: 150px;
}
}
@keyframes openSpace {
from {
  max-width: 0px;
}
to {
  max-width: 150px;
}
}
@-webkit-keyframes closeSpace {
to {
  opacity: 0.5;
  -webkit-transform: scale(0.1);
  max-width: 0px;
}
}
@-ms-keyframes closeSpace {
to {
  opacity: 0.5;
  -ms-transform: scale(0.1);
  max-width: 0px;
}
}
@keyframes closeSpace {
to {
  opacity: 0.5;
  transform: scale(0.1);
  max-width: 0px;
}
}
@-webkit-keyframes moveIn {
from {
  opacity: 0;
  -webkit-transform: translateY(-150px);
}
to {
  opacity: 1;
  -webkit-transform: translateY(0px);
}
}
@-ms-keyframes moveIn {
from {
  opacity: 0;
  -ms-transform: translateY(-150px);
}
to {
  opacity: 1;
  -ms-transform: translateY(0px);
}
}
@keyframes moveIn {
from {
  opacity: 0;
  transform: translateY(-150px);
}
to {
  opacity: 1;
  transform: translateY(0px);
}
}
@-webkit-keyframes moveOut {
to {
  -webkit-transform: translateY(-150px);
}
}

@-ms-keyframes moveOut {
to {
  -ms-transform: translateY(-150px);
}
}

@keyframes moveOut {
to {
  transform: translateY(-150px);
}
}

